# search-algo

./: CMakeLists.txt  README.md
data/: bellman.txt  dijkstra1.txt  time_loongson.txt  time_mpc1.txt
include/: dijkstra_short_path.h  directed_edge.h  edge_weighted_digraph.h  short_path.h
resource/: 20000EWD.txt  example.txt  make_ewd  make_ewd.cpp
src/: bellman.cpp  bellman_full.cpp  bellman_omp.cpp  bellman_omp_example.cpp  dijkstra.cpp  dijkstra_example1.cpp  dijkstra_example2.cpp  dijkstra_mpi.cpp  dijkstra_mpi2.cpp  dijkstra_omp_adj  dijkstra_openmp.cpp  dijkstra_openmp_adj.cpp  dijkstra_single.cpp  dijkstra_single_adj.cpp  floyd.cpp  floyd_omp.cpp  make_ewd.cpp  package.sh  read_digraph.cpp  running.sh
src/package/: readme.md  running.sh
